Change training site

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Settings.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Settings.cshtml
@@ -1,4 +1,4 @@
-﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.SettingsViewModel
+﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.ProviderUser.SettingsViewModel
 
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @{
