--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -1,4 +1,5 @@
-﻿@using SFA.Apprenticeships.Web.Recruit.Constants
+﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.ProviderUser.HomeViewModel
+@using SFA.Apprenticeships.Web.Recruit.Constants
 @{
     ViewBag.Title = "Recruit an Apprentice";
 }
@@ -12,20 +13,7 @@
     <div class="grid grid-1-2">
         <div class="">
             <p class="form-label">Change training site</p>
-            <select name="" id="" class="chosen-select">
-                <option value="">All training sites</option>
-                <option value="" selected>Basing View, Basingstoke</option>
-                <option value="">Great Charles Street Queensway, Birmingham</option>
-                <option value="">St. Helens Street, Ipswich</option>
-                <option value="">South Parade, Leeds</option>
-                <option value="">24-26 Baltic Street West, London</option>
-                <option value="">Dean Street, Newcastle upon Tyne</option>
-                <option value="">Judson Road, Peterlee</option>
-                <option value="">David Murray John Tower, Swindon</option>
-                <option value="">6-10 Gills Yard, Wakefield</option>
-                <option value="">Sheep Street, Wellingborough</option>
-                <option value="">Sheet Street, Windsor</option>
-            </select>
+            @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultTrainingSiteErn, Model.ProviderSites, new { @class = "chosen-select" })
         </div>
     </div>
 </div>
