Display chosen training site on dashboard

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -13,7 +13,7 @@
     <div class="grid grid-1-2">
         <div class="">
             <p class="form-label">Change training site</p>
-            @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultTrainingSiteErn, Model.ProviderSites, new { @class = "chosen-select" })
+            @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultTrainingSiteErn, Model.ProviderSites)
         </div>
     </div>
 </div>
