Validation for Vacancy View Model

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SubmitVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SubmitVacancy.cshtml
@@ -56,7 +56,7 @@
 
                     <div class="form-group">
                         <div data-editable>
-                            <p class="form-label">Apprenticeship level</p>
+                            <p class="bold-small form-label">Apprenticeship level</p>
                             @Html.DropDownListFor(m => m.ApprenticeshipLevel, Model.ApprenticeshipLevels, new {@class = "width-all-2-3" })
                         </div>
                     </div>
