Sprint 3 outline pages added.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -24,7 +24,7 @@
                 <h2 class="heading-medium">New vacancy</h2>
                 <p class="font-xsmall">Create a new vacancy, clone or continue with a draft</p>
                 <div class="font-xsmall">
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.NewVacancyLandingPage)" class="button">New vacancy</a>
+                    <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectExistingEmployer)" class="button">New vacancy</a>
                 </div>
             </section>
             <section>
