--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/VacancySubmitted.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SFA.Apprenticeships.Web.Recruit.ViewModels.Vacancy.SubmittedVacancyViewModel
 @using SFA.Apprenticeships.Web.Recruit.Constants
 @{
-    ViewBag.Title = "Recruit an Apprentice - Create new vacancy";
+    ViewBag.Title = "Recruit an Apprentice - Create New Vacancy";
 }
 
 <div class="panel-success toggle-content" id="vacancyShared">
