--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -4,63 +4,69 @@
     ViewBag.Title = "Recruit an Apprentice";
 }
 
-<div class="grid-wrapper para-btm-margin">
-    <div class="grid-1-2 grid">
-        <h1 class="heading-xlarge">
-            Recruitment home
-        </h1>
-    </div>
-    <div class="grid grid-1-2">
-        <div class="">
-            <p class="form-label">Change training site</p>
-            @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultTrainingSiteErn, Model.ProviderSites)
+@using (Html.BeginForm(null, "ProviderUser", null, FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
+    @Html.Partial("ValidationSummary", ViewData.ModelState)
+
+    <div class="grid-wrapper para-btm-margin">
+        <div class="grid-1-2 grid">
+            <h1 class="heading-xlarge">
+                Recruitment home
+            </h1>
+        </div>
+        <div class="grid grid-1-2">
+            <div class="">
+                <p class="form-label">Change training site</p>
+                @Html.DropDownListFor(m => m.ProviderUserViewModel.DefaultProviderSiteErn, Model.ProviderSites)
+                <button id="change-training-site-button" type="submit" name="TrainingSiteAction" class="button" value="ChangeTrainingSite">Change</button>
+            </div>
         </div>
     </div>
-</div>
-<div class="grid-wrapper">
-    <div class="grid grid-1-2">
-        <div class="inner-block-padr">
-            <section>
-                <h2 class="heading-medium">New vacancy</h2>
-                <p class="font-xsmall">Create a new vacancy, clone or continue with a draft</p>
-                <div class="font-xsmall">
-                    <a href="@Url.RouteUrl(RecruitmentRouteNames.SelectExistingEmployer)" class="button">New vacancy</a>
-                </div>
-            </section>
-            <section>
-                <h2 class="heading-medium">Your vacancies</h2>
-                <div class="grid-wrapper font-xsmall med-btm-margin">
-                    <div class="grid grid-2-3">
-                        <div class="inner-block-padr">
-                            <select name="" id="" class="form-label">
-                                <option value="" hidden>-- Filter vacancies --</option>
-                                <option value="">Employer</option>
-                                <option value="">Title</option>
-                                <option value="">Framework</option>
+    <div class="grid-wrapper">
+        <div class="grid grid-1-2">
+            <div class="inner-block-padr">
+                <section>
+                    <h2 class="heading-medium">New vacancy</h2>
+                    <p class="font-xsmall">Create a new vacancy, clone or continue with a draft</p>
+                    <div class="font-xsmall">
+                        <button id="new-vacancy-button" type="submit" name="TrainingSiteAction" class="button" value="NewVacancy">New vacancy</button>
+                    </div>
+                </section>
+                <section>
+                    <h2 class="heading-medium">Your vacancies</h2>
+                    <div class="grid-wrapper font-xsmall med-btm-margin">
+                        <div class="grid grid-2-3">
+                            <div class="inner-block-padr">
+                                <select name="" id="" class="form-label">
+                                    <option value="" hidden>-- Filter vacancies --</option>
+                                    <option value="">Employer</option>
+                                    <option value="">Title</option>
+                                    <option value="">Framework</option>
+                                </select>
+                                <input type="text" class="form-control width-all-1-1" id="filter-employers">
+                            </div>
+                        </div>
+                        <div class="grid grid-1-3 ta-right">
+                            <input type="text" class="form-control invisible med-btm-margin">
+                            <select name="" id="" class="small-right-margin">
+                                <option value="" hidden>-- Filter status --</option>
+                                <option value="">All</option>
+                                <option value="">Live</option>
+                                <option value="">For review</option>
+                                <option value="">Submitted</option>
+                                <option value="">Drafts</option>
+                                <option value="">Closed</option>
                             </select>
-                            <input type="text" class="form-control width-all-1-1" id="filter-employers">
                         </div>
                     </div>
-                    <div class="grid grid-1-3 ta-right">
-                        <input type="text" class="form-control invisible med-btm-margin">
-                        <select name="" id="" class="small-right-margin">
-                            <option value="" hidden>-- Filter status --</option>
-                            <option value="">All</option>
-                            <option value="">Live</option>
-                            <option value="">For review</option>
-                            <option value="">Submitted</option>
-                            <option value="">Drafts</option>
-                            <option value="">Closed</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="tabbed-element tab1 active width-all-1-1">
-                    <table class="no-btm-margin">
-                        <colgroup>
-                            <col class="t70">
-                            <col class="t30">
-                        </colgroup>
-                        <tbody>
+                    <div class="tabbed-element tab1 active width-all-1-1">
+                        <table class="no-btm-margin">
+                            <colgroup>
+                                <col class="t70">
+                                <col class="t30">
+                            </colgroup>
+                            <tbody>
                             <tr class="va-middle">
                                 <td>
                                     <div class="vac-title">
@@ -130,60 +136,61 @@
                                     <span class="tag-draft">Draft</span>
                                 </td>
                             </tr>
-                        </tbody>
-                    </table>
-                    <div class="page-navigation font-xsmall small-btm-margin">
-                        <a href="#" class="page-navigation__btn previous disabled">
-                            <i class="arrow-button fa fa-angle-left"></i>
-                            <span class="description">Previous</span>
-                            <span class="counter">1 of 2</span>
-                        </a>
-                        <a href="#" class="page-navigation__btn next">
-                            <i class="arrow-button fa fa-angle-right"></i>
-                            <span class="description">Next</span>
-                            <span class="counter">2 of 2</span>
-                        </a>
+                            </tbody>
+                        </table>
+                        <div class="page-navigation font-xsmall small-btm-margin">
+                            <a href="#" class="page-navigation__btn previous disabled">
+                                <i class="arrow-button fa fa-angle-left"></i>
+                                <span class="description">Previous</span>
+                                <span class="counter">1 of 2</span>
+                            </a>
+                            <a href="#" class="page-navigation__btn next">
+                                <i class="arrow-button fa fa-angle-right"></i>
+                                <span class="description">Next</span>
+                                <span class="counter">2 of 2</span>
+                            </a>
+                        </div>
                     </div>
-                </div>
+                </section>
+            </div>
+        </div>
+        <div class="grid grid-1-2">
+            <section class="font-xsmall">
+                <h2 class="heading-medium">Alerts</h2>
+                <ul class="list-text list-withicons">
+                    <li>
+                        <i class="fa fa-exclamation-circle the-icon"></i>You have 1 vacancy
+                        closing soon with 0 applications <a href="" class="link-unimp inl-block">Apprentice precision toolmaker</a>
+                    </li>
+                    <li>
+                        <i class="fa fa-flag the-icon"></i>You have 12 new applications
+                        for the vacancy <a href="live-apprenticeship-summary.html" class="link-unimp inl-block">Mechanical Engineer - Precision Toolmaker</a>
+                    </li>
+                </ul>
+            </section>
+            <section class="font-xsmall">
+                <h2 class="heading-medium">Useful information</h2>
+                <ul class="list-text">
+                    <li>
+                        <a href="/recruitment/info-expect-from-employer.html">Responsibilities of the employer</a>
+                    </li>
+                    <li>
+                        <a href="/recruitment/info-whos-involved.html">Who's involved in an apprenticeship?</a>
+                    </li>
+                    <li>
+                        <a href="/recruitment/info-expect-from-apprentice.html">What to expect from your apprentice</a>
+                    </li>
+                    <li>
+                        <a href="/recruitment/info-expect-from-provider.html">Responsibilities of the provider</a>
+                    </li>
+                    <li>
+                        <a href="/recruitment/info-payments-and-funding.html">Payments and funding</a>
+                    </li>
+                    <li>
+                        <a href="/recruitment/info-six-steps.html">How to employ an apprentice</a>
+                    </li>
+                </ul>
             </section>
         </div>
     </div>
-    <div class="grid grid-1-2">
-        <section class="font-xsmall">
-            <h2 class="heading-medium">Alerts</h2>
-            <ul class="list-text list-withicons">
-                <li>
-                    <i class="fa fa-exclamation-circle the-icon"></i>You have 1 vacancy
-                    closing soon with 0 applications <a href="" class="link-unimp inl-block">Apprentice precision toolmaker</a>
-                </li>
-                <li>
-                    <i class="fa fa-flag the-icon"></i>You have 12 new applications
-                    for the vacancy <a href="live-apprenticeship-summary.html" class="link-unimp inl-block">Mechanical Engineer - Precision Toolmaker</a>
-                </li>
-            </ul>
-        </section>
-        <section class="font-xsmall">
-            <h2 class="heading-medium">Useful information</h2>
-            <ul class="list-text">
-                <li>
-                    <a href="/recruitment/info-expect-from-employer.html">Responsibilities of the employer</a>
-                </li>
-                <li>
-                    <a href="/recruitment/info-whos-involved.html">Who's involved in an apprenticeship?</a>
-                </li>
-                <li>
-                    <a href="/recruitment/info-expect-from-apprentice.html">What to expect from your apprentice</a>
-                </li>
-                <li>
-                    <a href="/recruitment/info-expect-from-provider.html">Responsibilities of the provider</a>
-                </li>
-                <li>
-                    <a href="/recruitment/info-payments-and-funding.html">Payments and funding</a>
-                </li>
-                <li>
-                    <a href="/recruitment/info-six-steps.html">How to employ an apprentice</a>
-                </li>
-            </ul>
-        </section>
-    </div>
-</div>
+}
