US824: Enforce selection of a provider site

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/AddSite.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Provider/AddSite.cshtml
@@ -62,7 +62,7 @@
             <div class="form-group">
                 <a href="edit-site.html" class="button" id="searchTrainingNameBtn">Search</a>
             </div>
-            <section class="toggle-content clearfix" id="trainingSiteResults">
+            <section class="toggle-content clearfix" id="providerSiteResults">
                 <h2 class="heading-small">Training sites</h2>
                 <div class="grid grid-2-3 scrolling-panel max-height-15">
                     <table>
