--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/CreateVacancy.cshtml
@@ -67,7 +67,7 @@
         </label>
     </div>
 
-    @Html.HiddenFor(model => model.TrainingSiteErn)
+    @Html.HiddenFor(model => model.ProviderSiteErn)
 
     <fieldset class="form-group">
         <button type="submit" class="button">Create vacancy</button>
