--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SelectEmployer.cshtml
@@ -9,7 +9,7 @@
             Select employer
         </h1>
     </div>
-    <section class="clearfix" id="trainingSiteResults">
+    <section class="clearfix" id="providerSiteResults">
         <h2 class="heading-small">Employers</h2>
         <details>
             <summary>Filter</summary>
